hphp/hack/test/typecheck/typeconsts/interface_override_parent.php
<?hh

class A {
  const type T = int;
}

interface I {
  const type T = int;
}

class B extends A implements I {}
